# e2e_utils_beta

./: .gitignore  README.md  autoware.repos
.patches/: 0001-feat-autoware_tensorrt_vad-add-publisher-for-base_li.patch
script/: cleanup_core.py  cleanup_external.py  cleanup_universe.py  setup.sh
src/dummy_publisher/: README.md  awsim_config_sample.yaml  awsim_topic_pub.py  package.xml  setup.py
src/dummy_publisher/dummy_publisher/: awsim_topic_pub.py
src/dummy_publisher/launch/: awsim_topic_pub.launch.py
src/dummy_publisher/resource/: dummy_publisher
src/vad_aic_launch/: CMakeLists.txt  README.md  package.xml
src/vad_aic_launch/launch/: vad_aic.launch.xml
src/vlm_dual_planner_launch/: CMakeLists.txt  README.md  package.xml
src/vlm_planner/: README.md  prompt.py  pyproject.toml  vlm_planner.py  vlm_planner_node.py
src/vlm_trajectory_selector/: README.md  prompt.py  pyproject.toml  trajectory_selector.py  vlm_planner_node.py  vlm_selector.py
vlm_trajectory_selector/: README.md  vlm_planner_node.py
