[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-planner"
version = "0.1.0"
description = "VLM-based trajectory planner for autonomous driving"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "numpy<2",
    "opencv-python-headless",
    "accelerate>=1.1.1",
    "bitsandbytes>=0.44.1",
    "google-generativeai>=0.8.3",
    "jupyterlab>=4.3.1",
    "mss>=10.0.0",
    "protobuf>=5.28.3",
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
    "sentencepiece>=0.2.0",
    "timm>=1.0.11",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]

[tool.setuptools]
py-modules = [
    "vlm_planner_node",
]
